trying to fix nav bug on ios

--- a/app/globals.css
+++ b/app/globals.css
@@ -136,5 +136,6 @@
   body {
     @apply bg-background text-foreground;
     @apply scroll-smooth;
+    @apply h-full;
   }
 }
